--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,3 @@
-
-
 .animating {
     display: none;
 }
@@ -26,9 +24,49 @@
     animation-delay: 600ms;
 }
 
-.delay600 {
-    -webkit-animation-delay: 600ms;
-    animation-delay: 600ms;
+.delay800 {
+    -webkit-animation-delay: 800ms;
+    animation-delay: 800ms;
+}
+
+.delay1000 {
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+}
+
+.delay1200 {
+    -webkit-animation-delay: 1.2s;
+    animation-delay: 1.2s;
+}
+
+.delay1400 {
+    -webkit-animation-delay: 1.4s;
+    animation-delay: 1.4s;
+}
+
+.delay1600 {
+    -webkit-animation-delay: 1.6s;
+    animation-delay: 1.6s;
+}
+
+.delay1800 {
+    -webkit-animation-delay: 1.8s;
+    animation-delay: 1.8s;
+}
+
+.delay2000 {
+    -webkit-animation-delay: 2s;
+    animation-delay: 2s;
+}
+
+.delay2200 {
+    -webkit-animation-delay: 2.2s;
+    animation-delay: 2.2s;
+}
+
+.delay2400 {
+    -webkit-animation-delay: 2.4s;
+    animation-delay: 2.4s;
 }
 
 .delay900 {
@@ -76,9 +114,29 @@
     animation-delay: 3300ms;
 }
 
+.delay3400 {
+    -webkit-animation-delay: 3400ms;
+    animation-delay: 3400ms;
+}
+
 .delay3600 {
     -webkit-animation-delay: 3600ms;
     animation-delay: 3600ms;
+}
+
+@-webkit-keyframes pound {
+    from {
+        transform: none;
+        -webkit-transform: none;
+    }
+    50% {
+        transform: scale(0.4);
+        -webkit-transform: scale(0.4);
+    }
+    to {
+        transform: none;
+        -webkit-transform: none;
+    }
 }
 
 @keyframes pound {
@@ -102,6 +160,17 @@
     -webkit-animation: pound 2.5s infinite;
 }
 
+@-webkit-keyframes bigger {
+    from {
+        transform: scale(0.4);
+        -webkit-transform: scale(0.4);
+    }
+    to {
+        transform: none;
+        -webkit-transform: none;
+    }
+}
+
 @keyframes bigger {
     from {
         transform: scale(0.4);
@@ -117,6 +186,15 @@
     /* ... */
     animation: bigger 1s;
     -webkit-animation: bigger 1s;
+}
+
+@-webkit-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1
+    }
 }
 
 @keyframes fadein {
