业务反悔原稿，所以产品ui前端以及上线整个流程都全部重新跑一边，一共五个人为一个人的不负责任忙活一天

--- a/css/custom.css
+++ b/css/custom.css
@@ -19,6 +19,21 @@
     animation-delay: 2s;
 }
 
+.delay300 {
+    -webkit-animation-delay: 300ms;
+    animation-delay: 300ms;
+}
+
+.delay200 {
+    -webkit-animation-delay: 200ms;
+    animation-delay: 200ms;
+}
+
+.delay400 {
+    -webkit-animation-delay: 400ms;
+    animation-delay: 400ms;
+}
+
 .delay600 {
     -webkit-animation-delay: 600ms;
     animation-delay: 600ms;
